# lockmgr

./: README.rst  pyproject.toml
Docs/: Changelog.pkg  Changelog.rst  conf.py  index.rst
Docs/License/: License.rst
Docs/Misc/: Contributing.rst
examples/: test_lock.py
examples/research/: Makefile
packaging/: PKGBUILD  optional-requirements.txt
scripts/: check-source  do-install
src/lockmgr/: __about__.py  __init__.py  class_lock.py  version.py
