[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lockmgr"
dynamic = ["version"]
description = "lockmgr : Python class to manage lockfiles"
authors = [{ name = "Gene C", email = "arch@sapience.com" }]
license = "MIT"
readme = "README.rst"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/lockmgr"]
include = [
    "src/lockmgr",
    "src/lockmgr/py.typed",
]

[project.urls]
Documentation = "https://github.com/gene-git/lockmgr/Docs"
Issues = "https://github.com/gene-git/lockmgr/issues"
Source = "https://github.com/gene-git/lockmgr"

[tool.hatch.version]
path = "src/lockmgr/__about__.py"

[tool.hatch.envs.default]

[tool.hatch.envs.default.scripts]
[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.12", "3.13"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
]

